Public/styles.css
html, body {
  margin: 0;
  padding: 0;
  background-color: #20346a;
  font-family: 'Roboto', Arial, Helvetica, sans-serif;
  overflow: hidden;
}

button {
  font-family: 'Roboto', Arial, Helvetica, sans-serif;
}

/* Import Fonts */
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css?family=Manrope&display=swap');
@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');

@font-face {
  font-family: 'Gotham Book';
  font-style: normal;
  font-weight: normal;
  src: local('Gotham Book'), url('font/GOTHAMBOOK.woff') format('woff');
  }
/* Header styles */

#header {
  height: 10vh;
  height: calc(var(--vh, 1vh) * 10);
  background-color: #20346a;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: #fff;
}

#logo-home-link {
  height: 100%;
  display: flex;
  align-items: center;
  color: #fff;
}

#logo {
  height: 66%;
  margin-left: 1vh;
}

#logo-text {
  height: 25%;
}

#about-image {
  height: 33%;
  margin-right: 4vh;
}

/* Map container */

#map {
  height: 78vh;
  height: calc(var(--vh, 1vh) * 78);
}

/* Info window */

#description {
  font-size: 15px;
  font-weight: 300;
}

#infowindow-content .title {
  font-weight: bold;
}

#infowindow-content {
  display: none;
}

#map #infowindow-content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* #walk-span {
  dis
} */

#place-name {

}

#walk-label {
  font-size: 1.2rem;
  font-weight: lighter;
}

#walk-emoji {
  display: inline;
  font-size: 1.3rem;
}

/* Searchbar */

.pac-card {
  margin: 10px 0 0 10px;
  padding: 8px 0;
  border: solid #20346ab9;
  border-width: 2px;
  border-radius: 20px;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  outline: none;
  background-color: #fff;
  position: absolute;
  transition-property: all;
	transition-duration: .6s;
  transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
  animation: fadeIn ease 4s;
  -webkit-animation: fadeIn ease 4s;
  -moz-animation: fadeIn ease 4s;
  -o-animation: fadeIn ease 4s;
  -ms-animation: fadeIn ease 4s;
  width: 60vw;
  min-width: 75px;
  max-width: 500px;
}

#pac-input {
  border-style: none;
  background-color: rgba(255, 255, 255, 0);
  font-size: 19px;
  font-weight: 300;
  padding: 0 11px 0 13px;
  margin-left: 5px;
  margin-right: 30px;
  text-overflow: ellipsis;
  width: 90%;
  outline: none;
  
  animation: fadeIn ease 2s;
  -webkit-animation: fadeIn ease 2s;
  -moz-animation: fadeIn ease 2s;
  -o-animation: fadeIn ease 2s;
  -ms-animation: fadeIn ease 2s;
}

/* ******************************************************** */

#ui-container {
  background-color: #20346a;
  display: flex;
  flex-direction: column;
  align-items: center;
  z-index: 100;
}

#filter-ui {
  width: 90vw;
  height: 12vh;
  height: calc(var(--vh, 1vh) * 12);
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  column-gap: 3vw;
  align-items: center;
  justify-items: space-around;
}

.filter-ui-label {
  height: 50%;
  min-height: 35px;
  width: 100%;
  display: flex;
  justify-content: center;
}

.filter-ui-button {
  font-weight: bold;
  color: rgb(44, 44, 44);
  border: rgb(126, 126, 126) solid 1px;
  background: rgb(255,255,255);
background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgb(173, 173, 173) 100%);
  border-radius: 25px;
  height: 100%;
  width: 100%;
  max-width: 250px;
  font-size: 15px;
  -webkit-appearance: none;
  transition-duration: .3s;
  outline:none
}

.filter-ui-button:hover {
  /* background: rgb(214, 214, 214);
background: radial-gradient(circle, rgb(218, 218, 218) 0%, rgb(148, 148, 148) 100%); */
transition-duration: .3s;
-webkit-box-shadow: 0px 6px 15px 7px rgba(0,0,0,0.4), inset 0px -5px 14px -2px rgba(0,0,0,0.4); 
box-shadow: 0px 6px 15px 7px rgba(0,0,0,0.4), inset 0px -5px 14px -2px rgba(0,0,0,0.4);
}

#toggleFilters {
 display: flex;
justify-content: space-evenly;
align-items: center;
}

#filter-icon {
  display: inline;
  justify-self: center;
  padding: 5px 0;
}

/* The Modal (background) */

.modal {
  display: none;
  /* Hidden by default */
  position: fixed;
  /* Stay in place */
  background: transparent;
  z-index: 1;
  /* Sit on top */
  bottom: 0;
  width: 100vw;
  /* Full width */
  height: 100%;
  /* Full height */
  overflow: hidden;
  
}

/* Modal Content/Box */

.modal-content {
  position: fixed;
  height: 35%;
  width: calc(100vw - 4px);
  max-width: 500px;
  background-color: #fefefe;
  bottom: 12vh;
  right: 0;
  /* 55% from the top and centered */
  border: 4px solid #20346a;
  border-bottom: none;
  font-weight: bold;
  color: rgb(54, 54, 54);
  border-radius: 7px 7px 0 0;
  overflow-x: hidden;
  padding-bottom: 20px;
  -webkit-animation-name: animatebottom;
  -webkit-animation-duration: 0.2s;
  animation-name: animatebottom;
  animation-duration: .2s;
  z-index: 1;
}

.menu {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  overflow-y: scroll;
  
  height: 95%;
  padding: 20px 20px 0 20px;
  z-index: 1;
}

.menu::-webkit-scrollbar {
  width: 2em;
}

.menu::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

.menu::-webkit-scrollbar-thumb {
  background-color: darkgrey;
  outline: 1px solid slategrey;
}

/* The Close Button */

.close {
  color: #aaa;
  padding-left: 5px;
  float: left;
  font-size: 28px;
  font-weight: bold;
}

.close:hover, .close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}
/* ... */

